--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           java-version: '19'
+          distribution: 'temurin'
       - uses: gradle/gradle-build-action@v2.8.0
         with:
           arguments: build
